--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-      <meta property="og:image" content="https://w7.pngwing.com/pngs/923/227/png-transparent-wedding-invitation-bridegroom-bride-people-wedding-wedding-cake-topper-thumbnail.png" />
+      <meta property="og:image" content="/wedding-thumb.png" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
