--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-      <meta property="og:image" content="/wedding-thumb.png" />
+      <meta property="og:image" content="https://github.com/Paizurakhman/wedding-invitation/blob/main/public/wedding-thumb.png?raw=true" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
